[package]
name = "gridlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
web-sys = "0.3"
futures="0.3"
shogo = "*"
js-sys = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
duckduckgeo={git="https://github.com/tiby312/duckduckgeo.git"}
axgeom="*"
console_error_panic_hook="*"
model={path="model"}
collision="*"
cgmath="*"

[workspace]
members = [
    "model",
]

[dependencies.gloo]
version = "0.8"
features=[
  'futures'
  ]

[profile.release]
debug = true


[patch.crates-io]
shogo={path="../shogo"}
