[package]
name = "gridlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
web-sys = "0.3"
futures = {version="0.3"}
shogo = "*"
js-sys = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
duckduckgeo={git="https://github.com/tiby312/duckduckgeo.git"}
axgeom="*"
console_error_panic_hook="*"
model={path="model"}
collision={git="https://github.com/rustgd/collision-rs"}
cgmath="0.18.0"
smallvec = "1.11.0"
fixedbitset = {version="0.4.2",features=["serde"]}
base64 = "0.21.7"
byteorder = "1.5.0"
miniz_oxide = "0.7.1"
getrandom = { version = "0.2", features = ["js"] }
byte-slice-cast = "1.2.2"
querystring = "1.1.0"
postcard = {version="1.0.8",features=["alloc"]}
rand = "0.8.5"
serde_json = "1.0.127"
tinyvec = "1.8.0"

[workspace]
members = [
    "model",
]

[dependencies.gloo]
version = "0.8"
features=[
  'futures'
  ]

[profile.release]
debug = true
opt-level = 2


[patch.crates-io]
shogo={path="../shogo"}


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O1']
