[package]
name = "gridlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
web-sys = {version="0.3",features=["HtmlTextAreaElement"]}
futures = {version="0.3"}
shogo = "*"
js-sys = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
axgeom="*"
console_error_panic_hook="*"
model={path="model"}
engine={path="engine"}
gui={path="gui"}
hex={path="hex"}
collision={git="https://github.com/rustgd/collision-rs"}
cgmath="0.18.0"
getrandom = { version = "0.2", features = ["js"] }
querystring = "1.1.0"
serde_json = "1.0.127"
tinyvec = "1.8.0"
gloop={path="../gloop"}

[workspace]
members = [ "gui","engine",
    "model", "hex",
]

[dependencies.gloo]
version = "0.8"
features=[
  'futures'
  ]

# [profile.release]
# debug = true
# opt-level = 1


[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false

[profile.dev.package.engine]
opt-level = 2

[profile.dev.package.gui]
opt-level = 2

[profile.dev.package.hex]
opt-level = 2

[profile.dev.package.model]
opt-level = 2


[profile.dev.package."*"]
opt-level = 2


[profile.dev.build-override]
opt-level = 2


[patch.crates-io]
shogo={path="../shogo"}


# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O1']
