[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axgeom="*"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
cgmath="0.18.0"
bitvec = {version="1.0.1",features=["serde"]}
postcard = {version="1.0.8",features=["alloc"]}
miniz_oxide = "0.7.1"
base64 = "0.21.7"



