[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
axgeom="*"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
byte-slice-cast = "1.2.2"
collision={git="https://github.com/rustgd/collision-rs"}
cgmath="0.18.0"
serde = { version = "1.0", features = ["derive"] }
hex={path="../hex"}
model={path="../model"}
futures = {version="0.3"}
js-sys = "0.3.20"
serde_json = "1.0.127"
shogo={git="https://github.com/tiby312/shogo.git"}
querystring = "1.1.0"
gloop={git="https://github.com/tiby312/gloop.git"}
glam = "0.30.1"
glem = "0.1.1"

[dependencies.gloo]
version = "0.11"
features=[
  'futures'
  ]
