[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf={version="*", features=["import"]}
image="*"
glam = "0.30.1"
glem = "0.1.0"

[dependencies.gloo]
version = "0.8"
features=[
  'futures'
  ]
